# vgi-match

./: .dockerignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-entrypoint.sh  match_worker.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
test/sql/: match.test
tests/: harness.py  synthetic.py  test_client.py  test_linkage.py  test_tables.py
vgi_match/: __init__.py  buffering.py  linkage.py  schema_utils.py  tables.py  worker.py
