[project]
name = "vgi-match"
version = "0.1.0"
description = "Probabilistic entity resolution / record linkage / dedup (Splink) for DuckDB via VGI"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "entity-resolution",
    "record-linkage",
    "deduplication",
    "splink",
    "fellegi-sunter",
    "fuzzy-matching",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python",
    "splink>=4",
    "duckdb>=1",
    "pandas",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
]

[project.scripts]
vgi-match = "vgi_match.worker:main"
vgi-match-http = "vgi_match.worker:main_http"

[project.urls]
Homepage = "https://query.farm"

[tool.uv.sources]
# Develop against the local vgi-python checkout (sibling directory). Drop or
# override this block to resolve vgi-python from an index instead.
vgi-python = { path = "../vgi-python" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_match"]

[tool.hatch.build.targets.sdist]
include = [
    "vgi_match/",
    "match_worker.py",
    "conftest.py",
    "tests/",
    "test/",
    "README.md",
    "CLAUDE.md",
    "LICENSE",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
