[project]
name = "vgi-match"
version = "0.1.0"
description = "Probabilistic entity resolution / record linkage / dedup (Splink) for DuckDB via VGI"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "entity-resolution",
    "record-linkage",
    "deduplication",
    "splink",
    "fellegi-sunter",
    "fuzzy-matching",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python>=0.8.3",
    "splink>=4",
    "duckdb>=1",
    "pandas",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "pydoclint",
    "pandas-stubs",
]

[project.scripts]
vgi-match = "vgi_match.worker:main"
vgi-match-http = "vgi_match.worker:main_http"

[project.urls]
Homepage = "https://query.farm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_match"]

[tool.hatch.build.targets.sdist]
include = [
    "vgi_match/",
    "match_worker.py",
    "conftest.py",
    "tests/",
    "test/",
    "README.md",
    "CLAUDE.md",
    "LICENSE",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

# Splink ships an (incomplete) py.typed marker: many of its methods are
# unannotated, so under --strict every call trips no-untyped-call. Treat the
# package as untyped (Any) so the worker can call it without per-call ignores.
[[tool.mypy.overrides]]
module = ["splink.*"]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true

# pyarrow ships an incomplete py.typed marker; the IPC stream helpers
# (pa.ipc.new_stream / open_stream) and to_pandas() are unannotated, so under
# --strict they trip no-untyped-call / no-any-return. Treat pyarrow as untyped.
[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true
